versioned_docs/version-2.5.0/api-reference/classes/Proof.mdx
Defined in: [lib/proof-system/proof.ts:125](https://github.com/o1-labs/o1js/blob/df1ff77af12d7cbbed4a6167f02815fad4f0dceb/src/lib/proof-system/proof.ts#L125)

## Extends

- [`ProofBase`](ProofBase.mdx)\<`Input`, `Output`\>

## Extended by

- [`SelfProof`](SelfProof.mdx)

## Type Parameters

• **Input**

• **Output**

## Constructors

### new Proof()

```ts
new Proof<Input, Output>(__namedParameters: {
  maxProofsVerified: 0 | 1 | 2;
  proof: unknown;
  publicInput: Input;
  publicOutput: Output;
}): Proof<Input, Output>
```

Defined in: [lib/proof-system/proof.ts:71](https://github.com/o1-labs/o1js/blob/df1ff77af12d7cbbed4a6167f02815fad4f0dceb/src/lib/proof-system/proof.ts#L71)

#### Parameters

##### \_\_namedParameters

###### maxProofsVerified

`0` \| `1` \| `2`

###### proof

`unknown`

###### publicInput

`Input`

###### publicOutput

`Output`

#### Returns

[`Proof`](Proof.mdx)\<`Input`, `Output`\>

#### Inherited from

[`ProofBase`](ProofBase.mdx).[`constructor`](ProofBase.mdx#constructors)

## Properties

### maxProofsVerified

```ts
maxProofsVerified: 0 | 1 | 2;
```

Defined in: [lib/proof-system/proof.ts:37](https://github.com/o1-labs/o1js/blob/df1ff77af12d7cbbed4a6167f02815fad4f0dceb/src/lib/proof-system/proof.ts#L37)

#### Inherited from

[`ProofBase`](ProofBase.mdx).[`maxProofsVerified`](ProofBase.mdx#maxproofsverified-1)

***

### proof

```ts
proof: unknown;
```

Defined in: [lib/proof-system/proof.ts:36](https://github.com/o1-labs/o1js/blob/df1ff77af12d7cbbed4a6167f02815fad4f0dceb/src/lib/proof-system/proof.ts#L36)

#### Inherited from

[`ProofBase`](ProofBase.mdx).[`proof`](ProofBase.mdx#proof-1)

***

### publicInput

```ts
publicInput: Input;
```

Defined in: [lib/proof-system/proof.ts:34](https://github.com/o1-labs/o1js/blob/df1ff77af12d7cbbed4a6167f02815fad4f0dceb/src/lib/proof-system/proof.ts#L34)

#### Inherited from

[`ProofBase`](ProofBase.mdx).[`publicInput`](ProofBase.mdx#publicinput-1)

***

### publicOutput

```ts
publicOutput: Output;
```

Defined in: [lib/proof-system/proof.ts:35](https://github.com/o1-labs/o1js/blob/df1ff77af12d7cbbed4a6167f02815fad4f0dceb/src/lib/proof-system/proof.ts#L35)

#### Inherited from

[`ProofBase`](ProofBase.mdx).[`publicOutput`](ProofBase.mdx#publicoutput-1)

***

### shouldVerify

```ts
shouldVerify: Bool;
```

Defined in: [lib/proof-system/proof.ts:38](https://github.com/o1-labs/o1js/blob/df1ff77af12d7cbbed4a6167f02815fad4f0dceb/src/lib/proof-system/proof.ts#L38)

#### Inherited from

[`ProofBase`](ProofBase.mdx).[`shouldVerify`](ProofBase.mdx#shouldverify)

***

### publicInputType

```ts
static publicInputType: FlexibleProvable<any>;
```

Defined in: [lib/proof-system/proof.ts:26](https://github.com/o1-labs/o1js/blob/df1ff77af12d7cbbed4a6167f02815fad4f0dceb/src/lib/proof-system/proof.ts#L26)

#### Inherited from

[`ProofBase`](ProofBase.mdx).[`publicInputType`](ProofBase.mdx#publicinputtype)

***

### publicOutputType

```ts
static publicOutputType: FlexibleProvable<any>;
```

Defined in: [lib/proof-system/proof.ts:27](https://github.com/o1-labs/o1js/blob/df1ff77af12d7cbbed4a6167f02815fad4f0dceb/src/lib/proof-system/proof.ts#L27)

#### Inherited from

[`ProofBase`](ProofBase.mdx).[`publicOutputType`](ProofBase.mdx#publicoutputtype)

***

### tag()

```ts
static tag: () => {
  name: string;
};
```

Defined in: [lib/proof-system/proof.ts:28](https://github.com/o1-labs/o1js/blob/df1ff77af12d7cbbed4a6167f02815fad4f0dceb/src/lib/proof-system/proof.ts#L28)

#### Returns

```ts
{
  name: string;
}
```

##### name

```ts
name: string;
```

#### Inherited from

[`ProofBase`](ProofBase.mdx).[`tag`](ProofBase.mdx#tag)

## Accessors

### provable

#### Get Signature

```ts
get static provable(): ProvableProof<Proof<any, any>, any, any>
```

Defined in: [lib/proof-system/proof.ts:184](https://github.com/o1-labs/o1js/blob/df1ff77af12d7cbbed4a6167f02815fad4f0dceb/src/lib/proof-system/proof.ts#L184)

##### Returns

`ProvableProof`\<[`Proof`](Proof.mdx)\<`any`, `any`\>, `any`, `any`\>

#### Overrides

[`ProofBase`](ProofBase.mdx).[`provable`](ProofBase.mdx#provable)

## Methods

### declare()

```ts
declare(): boolean
```

Defined in: [lib/proof-system/proof.ts:54](https://github.com/o1-labs/o1js/blob/df1ff77af12d7cbbed4a6167f02815fad4f0dceb/src/lib/proof-system/proof.ts#L54)

To verify a recursive proof inside a ZkProgram method, it has to be "declared" as part of
the method. This is done by calling `declare()` on the proof.

Note: `declare()` is a low-level method that most users will not have to call directly.
For proofs that are inputs to the ZkProgram, it is done automatically.

You can think of declaring a proof as a similar step as witnessing a variable, which introduces
that variable to the circuit. Declaring a proof will tell Pickles to add the additional constraints
for recursive proof verification.

Similar to `Provable.witness()`, `declare()` is a no-op when run outside ZkProgram compilation or proving.
It returns `false` in that case, and `true` if the proof was actually declared.

#### Returns

`boolean`

#### Inherited from

[`ProofBase`](ProofBase.mdx).[`declare`](ProofBase.mdx#declare)

***

### publicFields()

```ts
publicFields(): {
  input: Field[];
  output: Field[];
}
```

Defined in: [lib/proof-system/proof.ts:111](https://github.com/o1-labs/o1js/blob/df1ff77af12d7cbbed4a6167f02815fad4f0dceb/src/lib/proof-system/proof.ts#L111)

#### Returns

```ts
{
  input: Field[];
  output: Field[];
}
```

##### input

```ts
input: Field[];
```

##### output

```ts
output: Field[];
```

#### Inherited from

[`ProofBase`](ProofBase.mdx).[`publicFields`](ProofBase.mdx#publicfields)

***

### toJSON()

```ts
toJSON(): JsonProof
```

Defined in: [lib/proof-system/proof.ts:61](https://github.com/o1-labs/o1js/blob/df1ff77af12d7cbbed4a6167f02815fad4f0dceb/src/lib/proof-system/proof.ts#L61)

#### Returns

[`JsonProof`](../type-aliases/JsonProof.mdx)

#### Inherited from

[`ProofBase`](ProofBase.mdx).[`toJSON`](ProofBase.mdx#tojson)

***

### verify()

```ts
verify(): void
```

Defined in: [lib/proof-system/proof.ts:126](https://github.com/o1-labs/o1js/blob/df1ff77af12d7cbbed4a6167f02815fad4f0dceb/src/lib/proof-system/proof.ts#L126)

#### Returns

`void`

***

### verifyIf()

```ts
verifyIf(condition: Bool): void
```

Defined in: [lib/proof-system/proof.ts:129](https://github.com/o1-labs/o1js/blob/df1ff77af12d7cbbed4a6167f02815fad4f0dceb/src/lib/proof-system/proof.ts#L129)

#### Parameters

##### condition

[`Bool`](Bool.mdx)

#### Returns

`void`

***

### \_proofFromBase64()

```ts
static _proofFromBase64(proofString: string, maxProofsVerified: 0 | 1 | 2): unknown
```

Defined in: [lib/proof-system/proof.ts:115](https://github.com/o1-labs/o1js/blob/df1ff77af12d7cbbed4a6167f02815fad4f0dceb/src/lib/proof-system/proof.ts#L115)

#### Parameters

##### proofString

`string`

##### maxProofsVerified

`0` | `1` | `2`

#### Returns

`unknown`

#### Inherited from

[`ProofBase`](ProofBase.mdx).[`_proofFromBase64`](ProofBase.mdx#_prooffrombase64)

***

### \_proofToBase64()

```ts
static _proofToBase64(proof: unknown, maxProofsVerified: 0 | 1 | 2): string
```

Defined in: [lib/proof-system/proof.ts:119](https://github.com/o1-labs/o1js/blob/df1ff77af12d7cbbed4a6167f02815fad4f0dceb/src/lib/proof-system/proof.ts#L119)

#### Parameters

##### proof

`unknown`

##### maxProofsVerified

`0` | `1` | `2`

#### Returns

`string`

#### Inherited from

[`ProofBase`](ProofBase.mdx).[`_proofToBase64`](ProofBase.mdx#_prooftobase64)

***

### dummy()

```ts
static dummy<Input, OutPut>(
   publicInput: Input, 
   publicOutput: OutPut, 
   maxProofsVerified: 0 | 1 | 2, 
domainLog2: number): Promise<Proof<Input, OutPut>>
```

Defined in: [lib/proof-system/proof.ts:169](https://github.com/o1-labs/o1js/blob/df1ff77af12d7cbbed4a6167f02815fad4f0dceb/src/lib/proof-system/proof.ts#L169)

Dummy proof. This can be useful for ZkPrograms that handle the base case in the same
method as the inductive case, using a pattern like this:

```ts
method(proof: SelfProof<I, O>, isRecursive: Bool) {
  proof.verifyIf(isRecursive);
  // ...
}
```

To use such a method in the base case, you need a dummy proof:

```ts
let dummy = await MyProof.dummy(publicInput, publicOutput, 1);
await myProgram.myMethod(dummy, Bool(false));
```

**Note**: The types of `publicInput` and `publicOutput`, as well as the `maxProofsVerified` parameter,
must match your ZkProgram. `maxProofsVerified` is the maximum number of proofs that any of your methods take as arguments.

#### Type Parameters

• **Input**

• **OutPut**

#### Parameters

##### publicInput

`Input`

##### publicOutput

`OutPut`

##### maxProofsVerified

`0` | `1` | `2`

##### domainLog2

`number` = `14`

#### Returns

`Promise`\<[`Proof`](Proof.mdx)\<`Input`, `OutPut`\>\>

***

### fromJSON()

```ts
static fromJSON<S>(this: S, __namedParameters: JsonProof): Promise<Proof<InferProvable<S["publicInputType"]>, InferProvable<S["publicOutputType"]>>>
```

Defined in: [lib/proof-system/proof.ts:133](https://github.com/o1-labs/o1js/blob/df1ff77af12d7cbbed4a6167f02815fad4f0dceb/src/lib/proof-system/proof.ts#L133)

#### Type Parameters

• **S** *extends* `Subclass`\<*typeof* [`Proof`](Proof.mdx)\>

#### Parameters

##### this

`S`

##### \_\_namedParameters

[`JsonProof`](../type-aliases/JsonProof.mdx)

#### Returns

`Promise`\<[`Proof`](Proof.mdx)\<[`InferProvable`](../type-aliases/InferProvable.mdx)\<`S`\[`"publicInputType"`\]\>, [`InferProvable`](../type-aliases/InferProvable.mdx)\<`S`\[`"publicOutputType"`\]\>\>\>

***

### publicFields()

```ts
static publicFields(value: ProofBase): {
  input: Field[];
  output: Field[];
}
```

Defined in: [lib/proof-system/proof.ts:103](https://github.com/o1-labs/o1js/blob/df1ff77af12d7cbbed4a6167f02815fad4f0dceb/src/lib/proof-system/proof.ts#L103)

#### Parameters

##### value

[`ProofBase`](ProofBase.mdx)

#### Returns

```ts
{
  input: Field[];
  output: Field[];
}
```

##### input

```ts
input: Field[];
```

##### output

```ts
output: Field[];
```

#### Inherited from

[`ProofBase`](ProofBase.mdx).[`publicFields`](ProofBase.mdx#publicfields-2)
